--- a/index.html
+++ b/index.html
@@ -12,11 +12,77 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     
-    <nav class="navbar bg-dark navcu">
+    <nav class="navbar navbar-expand-lg navcu">
         <div class="container-fluid">
             <a href="#" class="navbar-brand">
-                <img src="/images/icons8-iron-man-64.png" alt="blogLogo">
+                <img src="/images/icons8-iron-man-64.png" alt="blogLogo" class="w-75 img-fluid rounded-circle p-2 ms-1 logo-bordercu">
             </a>
+
+            <!-- <button class="navbar-toggler" 
+                    type="button" 
+                    data-bs-toggle="collapse" 
+                    data-bs-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button> -->
+
+            <button class="navbar-toggler" 
+                         type="button" 
+                         data-bs-toggle="collapse"              
+                         data-bs-target="#navbarNav" 
+                         aria-controls="navbarNav"
+                         aria-expanded="false" 
+                         arial-label="Toggle navigation">
+                <span class="line"></span> 
+                <span class="line"></span> 
+                <span class="line" style="margin-bottom: 0;"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item mx-2 my-3">
+                        <a href="#" class="nav-link rounded-2 text-center" aria-current="page">Home</a>
+                    </li>
+                    <li class="nav-item mx-2 my-3">
+                        <a href="#" class="nav-link rounded-2 text-center" aria-current="page">Lateset</a>
+                    </li>
+                    <li class="nav-item mx-2 my-3">
+                        <a href="#" class="nav-link rounded-2 text-center" aria-current="page">Trend</a>
+                    </li>
+                    <li class="nav-item mx-2 my-3"> 
+                        <a href="#" class="nav-link rounded-2 text-center" aria-current="page">About</a>
+                    </li>
+                </ul>
+
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+                <ul class="navbar-nav my-3 d-lg-none">
+                    <li class="nav-item mx-2">
+                        <a href="#" class="nav-link rounded-2 text-center" aria-current="page">Loginhh</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav my-3 d-lg-none">
+                    <li class="nav-item mx-2">
+                        <a href="#" class="nav-link rounded-2 text-center" aria-current="page">Signuphh</a>
+                    </li>
+                </ul>
+                    
+            </div>
+
+            <ul class="navbar-nav dlgnone">
+                <li class="nav-item mx-2">
+                    <a href="#" class="nav-link rounded-2 text-center" aria-current="page">Login</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav dlgnone">
+                <li class="nav-item mx-2">
+                    <a href="#" class="nav-link rounded-2 text-center" aria-current="page">Signup</a>
+                </li>
+            </ul>
         </div>
     </nav>
 </body>
