--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
             </div>
         </div>
-        <div class="card mb-3" style="max-width: auto%;">
+        <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="/images/post2.jpeg" class="img-fluid rounded-start" alt="...">
@@ -118,7 +118,7 @@
               </div>
             </div>
         </div>
-        <div class="card mb-3" style="max-width: auto%;">
+        <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="/images/post3.jpeg" class="img-fluid rounded-start" alt="...">
@@ -133,7 +133,7 @@
               </div>
             </div>
         </div>
-        <div class="card mb-3" style="max-width: auto%;">
+        <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="/images/post4.jpg" class="img-fluid rounded-start" alt="...">
@@ -148,7 +148,7 @@
               </div>
             </div>
         </div>
-        <div class="card mb-3" style="max-width: auto%;">
+        <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="/images/post5.jpeg" class="img-fluid rounded-start" alt="...">
@@ -163,7 +163,7 @@
               </div>
             </div>
         </div>
-        <div class="card mb-3" style="max-width: auto%;">
+        <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="/images/post6.jpeg" class="img-fluid rounded-start" alt="...">
@@ -178,7 +178,7 @@
               </div>
             </div>
         </div>
-        <div class="card mb-3" style="max-width: auto%;">
+        <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="/images/post7.jpeg" class="img-fluid rounded-start" alt="...">
@@ -193,7 +193,7 @@
               </div>
             </div>
         </div>
-        <div class="card mb-3" style="max-width: auto%;">
+        <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="/images/post8.jpeg" class="img-fluid rounded-start" alt="...">
@@ -208,7 +208,7 @@
               </div>
             </div>
         </div>
-        <div class="card mb-3" style="max-width: auto%;">
+        <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="/images/post9.jpeg" class="img-fluid rounded-start" alt="...">
